Parameterized test has been added.